Fixed how website looks on smaller computer screens and began editing styles for mobile website viewing.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,19 +1,20 @@
 .welcome-heading {
   text-align: initial;
-  width: 18%;
-  margin-left: 34.375rem;
-  margin-top: 15.625rem;
+  width: 25%;
+  margin-left: 25%;
+  margin-top: 14rem;
   font-size: 3rem;
 }
 
 .welcome-text {
   float: right;
-  width: 18%;
+  width: 25%;
   display: block;
   font-size: 1.5rem;
   position: relative;
-  bottom: 9.375rem;
-  margin-right: 34.375rem;
+  bottom: 11rem;
+  right: 25%;
+  /* margin-right: 34.375rem; */
   text-align: left;
 }
 
